--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,9 +30,7 @@
 
         <activity
             android:name=".EarthquakeActivity"
-            android:label="@string/title_activity_earthquake"
-            android:configChanges="orientation" />
-
+            android:label="@string/title_activity_earthquake" />
     </application>
 
 </manifest>
